<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.QuizActivity"
    android:background="@drawable/fondo_degradado_quiz">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/app_name"
        app:titleMarginStart="50dp">
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/ivAtras"
        android:layout_width="?attr/actionBarSize"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="start|top"
        android:src="@drawable/ic_flecha_atras"
        android:padding="15dp"
        android:importantForAccessibility="no"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end|center_vertical"
                android:text="@string/puntuacion"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textColor="@color/black"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/tvPuntuacion"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:gravity="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textColor="@color/black"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/imagenPokemon"
            android:layout_width="236dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="top|center"
            android:layout_weight="1.5"
            android:contentDescription="@string/imagen_del_pokemon" />

        <Button
            android:id="@+id/btnOpc1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_weight="0.1"
            android:onClick="onClick" />

        <Button
            android:id="@+id/btnOpc2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:onClick="onClick" />

        <Button
            android:id="@+id/btnOpc3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:onClick="onClick" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:cardCornerRadius="50dp"
                android:backgroundTint="@color/amber_700">

                <TextView
                    android:id="@+id/tvTiempo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:gravity="center"
                    android:padding="15dp"
                    android:textSize="50sp"
                    android:textAllCaps="true"
                    android:textColor="@color/black"/>

            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>